0028577: Get rid of the TopOpeBRep* algorithms in TKOffset toolkit

The TKOffset toolkit has been cleared from the usage of the obsolete TopOpeBRep* classes.